syntax = "proto3";

package user;

//option go_package = "github.com/jeepli/ichat/proto/user";
option go_package = "user";

import "user/user.proto";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserReply) {}
    rpc GetUsers(GetUsersRequest) returns (GetUsersReply) {}
    rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUsersReply) {}
  }
  
  // create user
  message CreateUserRequest {
    User user = 1;
  }
  
  message CreateUserReply {
    User user = 1;
  }

  // get user 
  message GetUsersRequest {
    repeated string ids = 1;
  }
  
  message GetUsersReply {      
    repeated User users = 1;
  }

  // get user by email
  message GetUserByEmailRequest {
    string email = 1;
  }
